# Claude

Projects/: Anthropic API — Living Doc.html  CMakeLists.txt  Closures in Swift — Examples.html  Closures in Swift — Living Doc.html  Git in CLion — Branching and Merging.html  Git in CLion — Tutorial & Notes.html  GitHub — A Complete Beginner's Tutorial.html  GitHub_Beginners_Tutorial.html  MusicKit — A Complete Beginner's Tutorial.html  MusicPracticeTrackerExplained.html  cpp_pointers_vs_references.html  pointer_arithmetic_and_iterators.html
Projects/.claude/memory/: MEMORY.md  workspace.md
Projects/Anthropic's API for use with iOS devices/: Anthropic API — Living Doc.md
Projects/Literature/: Demons - Parts 1-2 Refresher and Part 3 Compass.html
Projects/Software/: Anthropic API — Living Doc.html  Closures in Swift — Examples.html  Closures in Swift — Living Doc.html  MusicPracticeTracker RN Port — Living Doc.html  MusicPracticeTrackerExplained.html  cpp_collections_tutorial.html  cpp_pointers_vs_references.html  js-ts-webstorm-tutorial.html  main.cpp
Projects/Software/SmartPointersInC++/: smart_pointers_in_cpp.html
